--- a/blog/blog-styles.css
+++ b/blog/blog-styles.css
@@ -459,7 +459,7 @@
 .post-header {
     text-align: center;
     margin-bottom: 3rem;
-    max-width: 800px;
+    /* max-width: 800px; */
     margin-left: auto;
     margin-right: auto;
 }
@@ -575,7 +575,7 @@
 
 /* Post Content */
 .post-content {
-    max-width: 800px;
+    /* max-width: 800px; */
     margin: 0 auto;
     font-size: 1.1rem;
     line-height: 1.8;
@@ -651,7 +651,7 @@
 
 /* Post Footer */
 .post-footer {
-    max-width: 800px;
+    /* max-width: 800px; */
     margin: 4rem auto 0;
     padding-top: 2rem;
     border-top: 1px solid var(--border-color);
@@ -678,7 +678,7 @@
 }
 
 .comments-container {
-    max-width: 800px;
+    /* max-width: 800px; */
     margin: 0 auto;
 }
 
